<resources>
    <string name="app_name">Tc-Bike App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="another_account">هل لديك حساب ؟</string>
    <string name="tv_login">تسجيل الدخول</string>
    <string name="btn_new_user">تسجيل جديد</string>
    <string name="tv_accept_privacy">الموافقة على الشروط والاحكام</string>
    <string name="hint_password">كلمة المرور</string>
    <string name="label_password">كلمة المرور</string>
    <string name="hint_phone">رقم الجوال</string>
    <string name="label_phone">رقم الجوال</string>
    <string name="hint_full_name">الاسم بالكامل</string>
    <string name="label_full_name">الاسم بالكامل</string>
    <string name="or">أو</string>
    <string name="log_in_by_google">التسجيل بواسطة جوجل</string>
    <string name="enjoy_create_account">استمتع بانشاء حسابك معنا</string>
    <string name="tv_create_account">انشاء حساب جديد</string>
    <string name="privacy_and">الشروط والاحكام</string>
    <string name="lorem_terms">هذا النص هو مثال لنص يمكن أن يستبدل في نفس
المساحة، لقد تم توليد هذا النص من مولد النص العربى،
حيث يمكنك أن تولد مثل هذا النص أو العديد من
النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
التطبيق.
    هذا النص هو مثال لنص يمكن أن يستبدل في نفس
المساحة، لقد تم توليد هذا النص من مولد النص العربى،
حيث يمكنك أن تولد مثل هذا النص أو العديد من
النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
التطبيق.
    هذا النص هو مثال لنص يمكن أن يستبدل في نفس
المساحة، لقد تم توليد هذا النص من مولد النص العربى،
حيث يمكنك أن تولد مثل هذا النص أو العديد من
النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
التطبيق.
    هذا النص هو مثال لنص يمكن أن يستبدل في نفس
المساحة، لقد تم توليد هذا النص من مولد النص العربى،
حيث يمكنك أن تولد مثل هذا النص أو العديد من
النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
التطبيق.
    هذا النص هو مثال لنص يمكن أن يستبدل في نفس
المساحة، لقد تم توليد هذا النص من مولد النص العربى،
حيث يمكنك أن تولد مثل هذا النص أو العديد من
النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها

        هذا النص هو مثال لنص يمكن أن يستبدل في نفس
المساحة، لقد تم توليد هذا النص من مولد النص العربى،
حيث يمكنك أن تولد مثل هذا النص أو العديد من
النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
التطبيق.هذا النص هو مثال لنص يمكن أن يستبدل في نفس
المساحة، لقد تم توليد هذا النص من مولد النص العربى،
حيث يمكنك أن تولد مثل هذا النص أو العديد من
النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
التطبيق.هذا النص هو مثال لنص يمكن أن يستبدل في نفس
المساحة، لقد تم توليد هذا النص من مولد النص العربى،
حيث يمكنك أن تولد مثل هذا النص أو العديد من
النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
التطبيق.التطبيق.</string>
    <string name="please_enter_your_data">من فضلك ادخل بياناتك</string>
    <string name="remember_me">تذكرني</string>
    <string name="dont_have_account">لاتمتلك لديك حساب ؟</string>
    <string name="register_now">تسجيل</string>
    <string name="forget_password">نسيت كلمة المرور؟</string>
    <string name="verfiy_code_title">التحقق من الكود</string>
    <string name="dont_recive_code">لم تتلق رمز؟</string>
    <string name="resend">إعادة إرسال</string>
    <string name="tv_btn_send">إرسال</string>
    <string name="tv_forget_password_page">نسيت كلمة المرور</string>
    <string name="enter_mobile_number_for_get_password">أدخل رقم الهاتف المسجل للاستلام لاستعادة كلمة المرور</string>
    <string name="tv_reset_password_page_title">إعادة تعيين كلمة المرور</string>
    <string name="please_set_new_password">من فضلك قم بإعادة تعيين كلمة المرور</string>
    <string name="label_new_password">كلمة المرور الجديدة</string>
    <string name="label_confirm_password">تأكيد كلمة المرور</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_home">الرئيسية</string>
    <string name="menu_categories">التصنيفات</string>
    <string name="menu_cart">السلة</string>
    <string name="menu_profile">حسابي</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home_toolbar">الرئيسية</string>
    <string name="show_all">عرض الكل</string>
    <string name="all_category">كل التصنيفات</string>
    <string name="offer_special">عرض مميز</string>
    <string name="offers">العروض</string>
    <string name="most_popular">الأكثر شهرة</string>
    <string name="km">كم</string>
    <string name="minute">دقيقة</string>
    <string name="tv_color">اللون</string>
    <string name="description">الوصف</string>
    <string name="description_text_dummy">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم
توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا د النص العربى، حيث يمكنك أن تولد مثل هذا د النص العربى، حيث يمكنك أن تولد مثل هذا
توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا د النص العربى، حيث يمكنك أن تولد مثل هذا د النص العربى، حيث يمكنك أن تولد مثل هذا
النص</string>
    <string name="another_comment">هل لديك اضافات اخرى؟</string>
    <string name="all_products">كل المنتجات</string>
    <string name="badllat">بدالات</string>
    <string name="confirm_payment">تأكيد الطلب</string>
    <string name="tv_sum_label">المجموع</string>
    <string name="tv_cupon_label">الكوبون</string>
    <string name="tv_next">التالي</string>
    <string name="payment">الدفع</string>
    <string name="cash">نقدي</string>
    <string name="full_name">Full Name</string>
    <string name="ahmed_email_com">Ahmed@email.com</string>
    <string name="confirm_order">تأكيد الطلب</string>
    <string name="back">رجوع</string>
    <string name="success_payment_two">تمت العملية بنجاح</string>
    <string name="success_payment_one">تم تنفيذ الطلب بنجاح</string>
    <string name="congratulation">تهانينا</string>
    <string name="back_to_home">عودة الى الرئيسية</string>
    <string name="empty_card">السلة فارغة</string>
    <string name="no_item_in_cart">لا يوجد أي منتجات في سلة المشتريات</string>
    <string name="search">البحث</string>
    <string name="location_country">غزة</string>
    <string name="my_orders">طلباتي</string>
    <string name="order_details">تفاصيل الطلب</string>
    <string name="order_num">رقم الطلب  :</string>
    <string name="sgin_out">تسجيل خروج</string>
    <string name="about_app">حول التطبيق</string>
    <string name="favorites">المفضلة</string>
    <string name="notification">الإشعارات</string>
    <string name="settings">الإعدادات</string>
    <string name="orders">طلباتي</string>
    <string name="my_account">حسابي</string>
    <string name="change_photo">تغيير الصورة</string>
    <string name="please_turn_on_notification">من فضلك قمت بتفعيل الاشعارات</string>
    <string name="privacy_policy">سياسة الخصوصية</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="help_center">مركز المساعدة</string>
    <string name="change_lang">تغيير اللغة</string>
    <string name="arabic">  العربية</string>
    <string name="hebrew">  العبرية</string>
    <string name="name">الاسم</string>
    <string name="telephone_number">رقم الهاتف</string>
    <string name="email">البريد الالكتروني</string>
    <string name="feedback">ملاحظات</string>
    <string name="now">الان</string>
    <string name="what_is_our_application">ما هو تطبيقنا</string>
    <string name="what_does_our_app_do">ماذا يفعل تطبيقنا؟</string>
    <string name="enter_your_full_name">أدخل الاسم </string>
    <string name="required">هذا الحقل مطلوب</string>
    <string name="msg_phone_number_start_with">يجب ان يبدأ الرقم ب  972</string>
    <string name="msg_week_passwrod"> كلمة المرور ضعيفة \n كلمة يجب ان تكون بين 8 الى 20 \n يجب ان تحتوي على احرف كبيرة واحرف صغيرة  \n  يجب ان تحتوي على رموز   !@#$%*()-+=^
    </string>
    <string name="msg_write_cnf_correctly">تأكد من كلمة المرور بشكل صحيح</string>
    <string name="ok">"حسنا "</string>

</resources>