<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ahmed.store_app_pro_1.ui.activites.home.home_fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_category"
            app:destination="@id/navigation_category" />
    </fragment>

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.ahmed.store_app_pro_1.ui.activites.home.category_fragment.CategoryFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_navigation_category_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.ahmed.store_app_pro_1.ui.activites.home.cart_fragment.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />


    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ahmed.store_app_pro_1.ui.activites.home.profile_fragment.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />





</navigation>