<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:layout_height="match_parent"
    tools:context=".ui.activites.forget_password.ForgetPasswordActivity">




    <ImageView
        android:id="@+id/icon_back_on_boarding"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />


    <TextView
        android:id="@+id/tv_verfiy_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almarai_bold"
        android:text="@string/tv_forget_password_page"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_back_on_boarding" />


    <TextView
        android:id="@+id/tv_verfiy_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almarai_regular"
        android:text="@string/enter_mobile_number_for_get_password"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColor="@color/text_color_on_boarding_second"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/tv_verfiy_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_verfiy_1" />


    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almarai_regular"
        android:text="@string/label_phone"
        android:layout_marginTop="@dimen/_60sdp"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@+id/tv_verfiy_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_verfiy_2" />

    <EditText
        android:id="@+id/ed_text_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:inputType="phone"
        android:fontFamily="@font/almarai_regular"
        android:hint="@string/hint_phone"
        android:gravity="right|center"
        android:layoutDirection="rtl"
        android:maxEms="10"
        android:textSize="@dimen/_11ssp"
        android:textDirection="anyRtl"
        android:background="@drawable/bg_btn_sign_google"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:textCursorDrawable="@drawable/cursor_primary"
        android:layout_marginLeft="@dimen/_16sdp"
        android:drawableRight="@drawable/iphone"
        android:paddingRight="@dimen/_10sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone" />


    <Button
        android:id="@+id/btn_send_forget_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/on_boarding_btn_next"
        android:fontFamily="@font/almarai_regular"
        android:gravity="center"
        android:text="@string/tv_btn_send"
        android:textColor="@color/white"
        android:textCursorDrawable="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_text_phone" />











</androidx.constraintlayout.widget.ConstraintLayout>