<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activites.success_payment.SuccessPaymentActivity">


    <TextView
        android:id="@+id/tv_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/almarai_regular"
        android:text="@string/success_payment_one"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:background="@drawable/true_payment"
        android:gravity="center"
        android:layout_marginTop="@dimen/_80sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_success"
        android:orientation="horizontal" />


    <TextView
        android:id="@+id/tv_congratulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almarai_bold"
        android:text="@string/congratulation"
        android:textColor="@color/text_success_payment_color"
        android:textSize="@dimen/_24ssp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/tv_success_payment_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almarai_regular"
        android:text="@string/success_payment_two"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="@+id/tv_congratulation"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="@+id/tv_congratulation"
        app:layout_constraintTop_toBottomOf="@+id/tv_congratulation" />


    <Button
        android:id="@+id/btn_back_to_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/on_boarding_btn_next"
        android:fontFamily="@font/almarai_regular"
        android:text="@string/back_to_home"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_success_payment_second" />







</androidx.constraintlayout.widget.ConstraintLayout>